hphp/hack/test/typecheck/switch/multiple_defaults.php.exp
File "multiple_defaults.php", line 9, characters 5-12:
There can be only one default case in switch (NastCheck[3082])
