hphp/hack/test/typecheck/switch/multiple_defaults.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function foo(string $s) : int {
  switch ($s) {
    case '1':
      return 1;
    default:
    default:
      return 0;
      break;
  }
}
